...
            "state" : "translated",
            "value" : "Svaret kunne ikke afkodes"
          }
        }
      }
    },
    "Favourites" : {
      "extractionState" : "manual",
      "localizations" : {
        "da" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Favoritter"
...
            "state" : "translated",
            "value" : "Indstil sleep-timer"
          }
        }
      }
    },
    "Settings" : {
      "extractionState" : "manual",
      "localizations" : {
        "da" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Indstillinger"
...
            "state" : "translated",
            "value" : "Genveje"
          }
        }
      }
    },
    "Show Images" : {
      "extractionState" : "manual",
      "localizations" : {
        "da" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Vis billeder"
...
